# GPSTracker

./: .gitignore  README.md
gpstracker-cpp/: .gitignore  CMakeLists.txt  platformio.ini
gpstracker-cpp/build-vscode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
gpstracker-cpp/build-vscode/Testing/: TAG
gpstracker-cpp/build-vscode/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gpstracker-cpp/build-vscode/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gpstracker-cpp/include/: Bluetooth.h  BluetoothServer.h  BluetoothServerCallbacks.h  BluetoothWriteCallback.h  CMakeLists.txt  Configuration.h  ConfigurationManager.h  Coordenada.h  DateTime.h  EndConfigurationCallback.h  Example.h  GPS.h  GPSControllerMockup.h  GPSData.h  GPSDataProvider.h  Multithreading.h  Orchestator.h  SDManager.h  SDManagerMockup.h  SerialController.h  SerialControllerMockup.h  WiFiConfiguration.h  WiFiConnector.h  WiFiNetwork.h
gpstracker-cpp/include/GPS/: CMakeLists.txt  Coordenada.h  Coordinate.h  DateTime.h  GPS.h  GPSData.h
gpstracker-cpp/include/Mockups/: ControladorGPSMockup.h  SerialControllerMockup.h
gpstracker-cpp/include/Utils/: StringEquals.h  StringToNumber.h  (+1 more)
gpstracker-cpp/main_tests/: GPSControllerMainTest.cpp  GPSMainTest.cpp  MultithreadingMainTest.cpp  WiFiConfigurationMainTest.cpp
gpstracker-cpp/mockups/: BluetoothMockup.h  CMakeLists.txt  GPSControllerMockup.h  GPSControllerMockup2.h  SDManagerMockup.h  SerialControllerMockup.h  WiFiConfigurationMockup.h
gpstracker-cpp/src/: Bluetooth.cpp  BluetoothServer.cpp  BluetoothServerCallbacks.cpp  BluetoothWriteCallback.cpp  CMakeLists.txt  Configuration.cpp  ConfigurationManager.cpp  Coordenada.cpp  DateTime.cpp  EndConfigurationCallback.cpp  Example.cpp  GPS.cpp  GPSControllerMockup.cpp  GPSData.cpp  GPSDataProvider.cpp  Multithreading.cpp  NoMoreTokensException.cpp  Orchestator.cpp  SDManager.cpp  SerialController.cpp  StringEquals.cpp  StringToNumber.cpp  StringTokenizer.cpp  WiFiConfiguration.cpp  WiFiNetwork.cpp  WifiConnector.cpp  main-bluetooth.cpp  main.cpp
gpstracker-cpp/test/: BluetoothServerTests.cpp  CMakeLists.txt  CoordenadaTests.cpp  DateTimeTests.cpp  ExampleTests.cpp  GPSControllerMockupTests.cpp  GPSDataTests.cpp  GPSTests.cpp  HaversineTests.cpp  StringEqualsTests.cpp  StringToNumberTests.cpp  StringTokenizerTests.cpp  WiFiConfigurationTests.cpp  WiFiNetworkTests.cpp
gpstracker-cpp/utils/: Haversine.cpp  StringTokenizer.cpp
(+155 files in other folders)
